# x-api-integration

./: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: fb8602f2bb1a_add_x_api_response_table.py
app/: main.py  settings.py
app/api/: exception_handlers.py
app/api/v1/x/: accounts.py  base.py  posts.py
app/core/: http_client.py
app/core/database/: base.py  database.py
app/core/dependencies/: fastapi.py
app/core/exceptions/: __init__.py  base.py  provider.py  x.py
app/core/providers/: base.py
app/core/providers/twitterapi_io/: adapter.py  client.py  provider.py  schemas.py
app/core/utils/: __init__.py  cost_calculator.py  get_post_ids_from_urls.py  get_usernames_from_urls.py  max_runtime.py  pagination.py  status_codes.py  x_url_normalization.py
app/models/: __init__.py  mixins.py  x_response.py
app/repository/: base.py  x_response.py
app/schemas/: __init__.py  error.py  x_base.py  x_entities.py  x_queries.py
app/services/: response_recorder.py  x_service.py
tests/: conftest.py  factories.py
tests/integration/: test_api.py  test_client.py  test_http_client.py  test_provider.py  test_repository.py  test_service.py
tests/unit/: test_adapter.py  test_cost_calculator.py  test_pagination.py  test_status_codes.py  test_url_normalization.py
